<resources>
    <string name="app_name">KPTI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="splash_label_1">Temukan Tempat Hunian</string>
    <string name="splash_label_2">Impian Anda</string>
    <string name="splash_label_3">Cari Properti dengan mudah</string>
    <string name="splash_label_4">menggunakan aplikasi kami</string>
    <string name="spash_label_5">Get Started</string>
    <string name="login_label_1">Login</string>
    <string name="login_hint_email">E-mail</string>
    <string name="login_hint_password">Password</string>
    <string name="login_text_password">Forgot Password?</string>
    <string name="login_btn_login">LOGIN</string>
    <string name="login_text_dont_have_account">Don\'t Have an Account?</string>
    <string name="login_register">Register</string>
    <string name="property">property</string>
    <string name="register_dec_logo">logo</string>
    <string name="register_form_register">Form Register</string>
    <string name="register_nama">Nama</string>
    <string name="register_email">Email</string>
    <string name="register_nohp">No. Handphone</string>
    <string name="register_password">Password</string>
    <string name="register_confir_password">Konfirmasi Password</string>
    <string name="register_submit">SUBMIT</string>
    <string name="email_label_confirm_1">Thanks for registering with us</string>
    <string name="email_confirm_label_2">in order to active your account please check your email</string>
    <string name="email_active_account">ACTIVE YOUR ACCOUNT</string>
    <string name="email_dec_img_confirm">check confirm</string>
    <string name="email_dec_img_message">check message</string>
    <string name="email_dec_smile_face">smile face</string>
    <string name="register_login">Login</string>
    <string name="home_indonesia">Indonesia</string>
    <string name="home_recomendation_label">Rekomendasi properti pilihan hari ini</string>
    <string name="profil_profilimge">profil image</string>
    <string name="info_property">info property</string>
    <string name="profil_agen">Agen</string>
    <string name="profil_property">Property</string>
    <string name="profil_62">+62</string>
    <string name="settiing_profile_e_mail">E-mail</string>
</resources>