<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.splashscreen.SplashscreenFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/splash_line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintLeft_toRightOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo">

        <TextView
            android:id="@+id/label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_label_1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_label_2"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/splash_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_label_3"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/splash_label_4"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/btn_getstarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/actionBarItemBackground"
        android:padding="12dp"
        android:text="@string/spash_label_5"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_line_2" />

    <ImageView
        android:id="@+id/bottom_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_image_1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/property" />


</androidx.constraintlayout.widget.ConstraintLayout>